Adding per_fix column to database

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ importFrom(foreach,foreach)
 importFrom(parallel,makeCluster)
 importFrom(phytools,bind.tip)
 importFrom(snow,makeSOCKcluster)
+importFrom(stats,runif)
 importFrom(stringr,str_split)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
