--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: Avotrex
+Package: avotrex
 Version: 0.1.0
 Type: Package
 Title: A global dataset of anthropogenic extinct birds and their traits: Phylogeny builder
@@ -11,7 +11,7 @@ Authors@R: c(person("Joseph", "Wayman", email = "j.wayman@bham.ac.uk",
 Encoding: UTF-8
 RoxygenNote: 7.2.3
 Depends: 
-    R (>= 2.10)
+    R (>= 4.0.0)
 LazyData: true
 Imports: 
     ape,
