Updating phylo database to V15

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ import(ape)
 importFrom(doParallel,registerDoParallel)
 importFrom(doSNOW,registerDoSNOW)
 importFrom(dplyr,filter)
+importFrom(foreach,`%do%`)
+importFrom(foreach,`%dopar%`)
 importFrom(foreach,foreach)
 importFrom(parallel,makeCluster)
 importFrom(phytools,bind.tip)
