--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,18 +5,19 @@ export(AvoBind)
 export(AvoPhylo)
 import(ape)
 importFrom(ape,keep.tip)
+importFrom(ape,plot.phylo)
 importFrom(doParallel,registerDoParallel)
 importFrom(doSNOW,registerDoSNOW)
 importFrom(dplyr,filter)
 importFrom(foreach,`%do%`)
 importFrom(foreach,`%dopar%`)
 importFrom(foreach,foreach)
-importFrom(ggtree,geom_tiplab)
-importFrom(ggtree,ggtree)
+importFrom(graphics,par)
 importFrom(parallel,makeCluster)
 importFrom(phytools,bind.tip)
 importFrom(snow,makeSOCKcluster)
 importFrom(stats,runif)
 importFrom(stringr,str_split)
+importFrom(treeio,tree_subset)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
