chaging treeio to tidytree

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,6 @@ importFrom(phytools,bind.tip)
 importFrom(snow,makeSOCKcluster)
 importFrom(stats,runif)
 importFrom(stringr,str_split)
-importFrom(treeio,tree_subset)
+importFrom(tidytree,tree_subset)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
