--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,9 @@ S3method(plot,multiAvophylo)
 export(AvoBind)
 export(AvoPhylo)
 import(ape)
+importFrom(TreeTools,AddTip)
+importFrom(ape,branching.times)
+importFrom(ape,getMRCA)
 importFrom(ape,keep.tip)
 importFrom(ape,plot.phylo)
 importFrom(doParallel,registerDoParallel)
@@ -16,10 +19,12 @@ importFrom(foreach,foreach)
 importFrom(grDevices,devAskNewPage)
 importFrom(graphics,par)
 importFrom(parallel,makeCluster)
+importFrom(parallel,stopCluster)
 importFrom(phytools,bind.tip)
 importFrom(snow,makeSOCKcluster)
 importFrom(stats,runif)
 importFrom(stringr,str_split)
 importFrom(tidytree,tree_subset)
+importFrom(utils,getFromNamespace)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
